--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.javascript linguist-detectable=true 
+*.js linguist-detectable=true 
+*.html linguist-detectable=false  
+*.xml linguist-detectable=false 
